force-app/main/default/objects/Loan_and_Dues__c/Loan_and_Dues__c.object-meta.xml
<CustomObject>
    <label>Loan and Dues</label>
    <nameField>
        <displayFormat>Dues-{000}</displayFormat>
        <label>Dues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans and Dues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>