force-app/main/default/objects/Loan_and_Dues__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments / Reason</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>