force-app/main/default/objects/Loan_and_Dues__c/fields/Due_type__c.field-meta.xml
<CustomField>
    <fullName>Due_type__c</fullName>
    <defaultValue>&quot;Owe to&quot;</defaultValue>
    <label>Due type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owe to</fullName>
            </value>
            <value>
                <fullName>Pending with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>