force-app/main/default/objects/Loan_and_Dues__c/fields/Paid_date__c.field-meta.xml
<CustomField>
    <fullName>Paid_date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Paid date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>