force-app/main/default/objects/Loan_and_Dues__c/fields/Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Name__c</fullName>
    <label>Person Name</label>
    <referenceTo>User_Master__c</referenceTo>
    <relationshipLabel>Loans and Dues</relationshipLabel>
    <relationshipName>Loans_and_Dues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>