force-app/main/default/objects/Loan_and_Dues__c/fields/Secondary_User__c.field-meta.xml
<CustomField>
    <fullName>Secondary_User__c</fullName>
    <label>Secondary User</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>