force-app/main/default/objects/Loan_and_Dues__c/fields/Settled_date__c.field-meta.xml
<CustomField>
    <fullName>Settled_date__c</fullName>
    <label>Settled Date</label>
    <type>DateTime</type>
</CustomField>