force-app/main/default/objects/Loan_and_Dues__c/validationRules/Name_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Person_Name__r.Name  =  Secondary_User__c</errorConditionFormula>
    <errorMessage>Invalid Name, Please enter a valid name.</errorMessage>
</ValidationRule>