force-app/main/default/objects/Loan_and_Dues__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Person_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_type__c</columns>
    <columns>Secondary_User__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Settled_date__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>