force-app/main/default/objects/Loan_and_Dues__c/listViews/Dues.listView-meta.xml
<ListView>
    <fullName>Dues</fullName>
    <columns>NAME</columns>
    <columns>Person_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_type__c</columns>
    <columns>Secondary_User__c</columns>
    <columns>Status__c</columns>
    <columns>Paid_date__c</columns>
    <columns>Settled_date__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_type__c</field>
        <operation>equals</operation>
        <value>Owe to</value>
    </filters>
    <filters>
        <field>Person_Name__c</field>
        <operation>equals</operation>
        <value>Aravindh</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Dues</label>
</ListView>