force-app/main/default/objects/Loan_and_Dues__c/listViews/Pending_Amount.listView-meta.xml
<ListView>
    <fullName>Pending_Amount</fullName>
    <columns>NAME</columns>
    <columns>Person_Name__c</columns>
    <columns>Secondary_User__c</columns>
    <columns>Amount__c</columns>
    <columns>Paid_date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_type__c</field>
        <operation>equals</operation>
        <value>pending with</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Amount</label>
</ListView>